--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,30 @@
 /** Add a comment at the beginning of your CSS styles with your name**/
+/** tabitha lewis **/
+.tabi-advice {
+	background-color: #33cccc;
+}
+.tabi-advice a {
+	background-color: #e699ff;
+	text-align: justify;
+	font-family: verdana;
+	font-size: 18px;
+}
 
+.tabi-advice h1 {
+	color: #e60000;
+}
+
+.tabi-advice h4 {
+	color: #2d5986;
+}
+
+.tabi-advice {
+	color: white;
+}
+
+.tabi-advice footer p {
+	color: #2d5986;
+}
 /** Ozge's Styles **/
 .ozge-advice {
     width: 100%;
